# cpu-emulator

./: .gdbinit  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  CMakeLists.txt  Contributing.md  ISC_generation.html  Instructions.md  LICENSE  Makefile  README.md  a.out  common.h  config.ini  constants.h  display-text.m  easySubroutine.m  emulator  emulator.c  execute_instructions.c  flash.m  flash_file.hex  flash_file.m  flashedSubroutine.m  ini_file_parser.c  interrupts.c  main  main.c  main.h  mmu.c  mmu.h  mov.c  paging.c  paging_bulk.c  paging_init.c  peripherals.c  program-alt.m  program.hex  program.m  (+5 more)
cmake/: FindSDL2_ttf.cmake
gui/: ScanCodes.md  keyboard_mappings.c  main.c  main.cpp  main.h
ipc/: main.cpp  main.h
keyboard/: Keycodes.md  ScanCodes.md  keyboard.c  main.c  main.h  scan_code_map.c  test.c
keyboard-sdl/: main.c  main.h
socket/: unix-socket.c  unix_socket.c
sv/: ARCHITECTURE.md  BUG_SUMMARY.md  BUG_SUMMARY_FINAL.md  DELIVERABLES.md  DEVELOPER_GUIDE.md  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  ISA_REFERENCE.md  MEMORY_SYSTEM.md  MICROARCHITECTURE.md  MODULE_DOCUMENTATION.md  Makefile  PIPELINE.md  README.md  REFACTORING_STATUS.md  REMAINING_WORK.md  TESTING_AND_VERIFICATION.md  TESTING_GUIDE.md  ulx3s-85f-min.lpf
sv/MODULE_REFERENCE/: README.md  alu.md  branch_unit.md  core_top.md  decode_unit.md  execute_stage.md  fetch_unit.md  hazard_unit.md  issue_unit.md  memory_stage.md  multiply_unit.md  neocore_pkg.md  pipeline_regs.md  register_file.md  unified_memory.md  writeback_stage.md
sv/mem/: test_2byte.hex  test_3nop_hlt.hex  test_4byte.hex  test_5byte.hex  test_7byte.hex  test_branch_sequence.hex  test_dependency_chain.hex  test_exact17.hex  test_just_hlt.hex  test_load_use_hazard.hex  test_mixed_lengths.hex  test_programs.txt  test_simple.hex  test_three_mov.hex  test_two_mov.hex
sv/rtl/: alu.sv  branch_unit.sv  core_top.sv  decode_unit.sv  decode_unit.sv.old  execute_stage.sv  fetch_unit.sv  fetch_unit.sv.old  hazard_unit.sv  issue_unit.sv  memory_stage.sv  multiply_unit.sv  neocore_pkg.sv  pipeline_regs.sv  register_file.sv  simple_memory.sv  unified_memory.sv  writeback_stage.sv
sv/scripts/: bin2hex.py
sv/tb/: alu_tb.sv  branch_unit_tb.sv  core_advanced_tb.sv  core_any_tb.sv  core_simple_tb.sv  core_tb.sv  core_unified_tb.sv  decode_unit_tb.sv  multiply_unit_tb.sv  register_file_tb.sv
test/: Makefile  main.c  main.h  test
uart/: uart.c  uart.h
